--- a/MvvmWPFTest/App.xaml
+++ b/MvvmWPFTest/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="MvvmWPFTest.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MvvmWPFTest"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<Application
+	x:Class="MvvmWPFTest.App"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:local="clr-namespace:MvvmWPFTest"
+	StartupUri="MainWindow.xaml">
+	<Application.Resources />
 </Application>
