--- a/MvvmExample/Views/Windows/MainWindow.xaml
+++ b/MvvmExample/Views/Windows/MainWindow.xaml
@@ -1,12 +1,23 @@
-﻿<Window x:Class="MvvmExample.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MvvmExample"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+﻿<Window
+	x:Class="MvvmExample.MainWindow"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="clr-namespace:MvvmExample"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:vm="clr-namespace:MvvmExample.ViewModels"
+	Title="{Binding Title}"
+	Width="800"
+	Height="450"
+	mc:Ignorable="d">
+	<Window.DataContext>
+		<vm:MainWindowViewModel />
+	</Window.DataContext>
+	<Grid>
+		<TextBox
+			Width="300"
+			Height="20"
+			Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}" />
+
+	</Grid>
 </Window>
