--- a/MvvmExample/Views/Windows/MainWindow.xaml
+++ b/MvvmExample/Views/Windows/MainWindow.xaml
@@ -16,7 +16,7 @@
 	<DockPanel>
 		<Menu DockPanel.Dock="Top">
 			<MenuItem Header="Файл">
-				<MenuItem Header="Выход" />
+				<MenuItem Header="Выход" Command="" />
 			</MenuItem>
 			<MenuItem Header="Помощь">
 				<MenuItem Header="О программе" />
@@ -24,7 +24,7 @@
 		</Menu>
 		<StatusBar DockPanel.Dock="Bottom">
 			<StatusBarItem>
-				<TextBlock Text="1234" />
+				<TextBlock Text="{Binding Status}" />
 			</StatusBarItem>
 			<StatusBarItem>
 				<ProgressBar
@@ -59,6 +59,8 @@
 						Fill="Red"
 						Stroke="Blue"
 						StrokeThickness="3" />
+					<GridSplitter Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right" Width="2">
+						</GridSplitter>
 				</Grid>
 			</TabItem>
 			<TabItem Header="Вкладка 2" />
