Добавляем в модель0представления Главного окна команду выхода

--- a/MvvmExample/Views/Windows/MainWindow.xaml
+++ b/MvvmExample/Views/Windows/MainWindow.xaml
@@ -16,7 +16,7 @@
 	<DockPanel>
 		<Menu DockPanel.Dock="Top">
 			<MenuItem Header="Файл">
-				<MenuItem Header="Выход" Command="" />
+				<MenuItem Header="Выход" Command="{Binding CloseAppCommand}" />
 			</MenuItem>
 			<MenuItem Header="Помощь">
 				<MenuItem Header="О программе" />
