--- a/MvvmExample/Views/Windows/MainWindow.xaml
+++ b/MvvmExample/Views/Windows/MainWindow.xaml
@@ -2,28 +2,39 @@
 	x:Class="MvvmExample.MainWindow"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:cmd="clr-namespace:MvvmExample.Infrastructure.Commands"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:fa="http://schemas.fontawesome.com/icons/"
 	xmlns:local="clr-namespace:MvvmExample"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:vm="clr-namespace:MvvmExample.ViewModels"
-	xmlns:cmd="clr-namespace:MvvmExample.Infrastructure.Commands"
 	Title="{Binding Title}"
-
 	Width="800"
 	Height="450"
 	mc:Ignorable="d">
+	<Window.Resources>
+		<cmd:CloseAppCommand x:Key="CloseAppCommand" />
+	</Window.Resources>
+	<Window.InputBindings>
+		<KeyBinding Key="Q" Modifiers="Control">
+			<KeyBinding.Command>
+				<cmd:CloseAppCommand />
+			</KeyBinding.Command>
+		</KeyBinding>
+	</Window.InputBindings>
 	<Window.DataContext>
 		<vm:MainWindowViewModel />
 	</Window.DataContext>
+
 	<DockPanel>
 		<Menu DockPanel.Dock="Top">
 			<MenuItem Header="Файл">
+				<MenuItem Command="{StaticResource CloseAppCommand}" Header="Выход" />
 				<!--<MenuItem Header="Выход" Command="{Binding CloseAppCommand}" />-->
-				<MenuItem Header="Выход">
+				<!--<MenuItem Header="Выход">
 					<MenuItem.Command>
-						<cmd:CloseAppCommand/>
-					</MenuItem.Command>
-				</MenuItem>
+						<cmd:CloseAppCommand />
+					</MenuItem.Command>-->
 			</MenuItem>
 			<MenuItem Header="Помощь">
 				<MenuItem Header="О программе" />
@@ -41,7 +52,16 @@
 			</StatusBarItem>
 		</StatusBar>
 		<TabControl>
-			<TabItem Header="Вкладка 1">
+			<TabItem>
+				<TabItem.Header>
+					<StackPanel Orientation="Horizontal">
+						<fa:ImageAwesome
+							Height="13"
+							Margin="0,0,5,0"
+							Icon="Regular_FileAlt" />
+						<TextBlock Text="Вкладка 1" />
+					</StackPanel>
+				</TabItem.Header>
 				<Grid>
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition Width="68*" />
@@ -65,9 +85,16 @@
 						Grid.Column="1"
 						Fill="Red"
 						Stroke="Blue"
-						StrokeThickness="3" />
-					<GridSplitter Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right" Width="2">
-						</GridSplitter>
+						StrokeThickness="3">
+						<Ellipse.InputBindings>
+							<MouseBinding Command="{Binding CloseAppCommand}" MouseAction="LeftDoubleClick" />
+						</Ellipse.InputBindings>
+					</Ellipse>
+					<GridSplitter
+						Grid.Row="0"
+						Grid.Column="0"
+						Width="2"
+						HorizontalAlignment="Right" />
 				</Grid>
 			</TabItem>
 			<TabItem Header="Вкладка 2" />
