вывод на график тестовых данных

--- a/MvvmExample/Views/Windows/MainWindow.xaml
+++ b/MvvmExample/Views/Windows/MainWindow.xaml
@@ -8,6 +8,7 @@
 	xmlns:local="clr-namespace:MvvmExample"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:vm="clr-namespace:MvvmExample.ViewModels"
+	xmlns:oxy="http://oxyplot.org/wpf"
 	Title="{Binding Title}"
 	Width="800"
 	Height="450"
@@ -97,7 +98,16 @@
 						HorizontalAlignment="Right" />
 				</Grid>
 			</TabItem>
-			<TabItem Header="Вкладка 2" />
+			<TabItem Header="График" >
+				<oxy:Plot>
+					<oxy:Plot.Axes>
+						<oxy:LinearAxis Position="Left"/>
+						<oxy:LinearAxis Position="Bottom"/>
+
+					</oxy:Plot.Axes>
+					<oxy:LineSeries Color="Blue" ItemsSource="{Binding TestDataPoints}" DataFieldX="XValue" DataFieldY="YValue"></oxy:LineSeries>
+				</oxy:Plot>
+			</TabItem>
 		</TabControl>
 	</DockPanel>
 </Window>
