--- a/MvvmExample/Views/Windows/MainWindow.xaml
+++ b/MvvmExample/Views/Windows/MainWindow.xaml
@@ -40,6 +40,21 @@
 			<MenuItem Header="Помощь">
 				<MenuItem Header="О программе" />
 			</MenuItem>
+			<MenuItem Command="{Binding ChangeTabIndexCommand}" CommandParameter="-1">
+				<MenuItem.Header>
+					<fa:ImageAwesome Height="12" Icon="Regular_ArrowAltCircleLeft"/>
+				</MenuItem.Header>
+			</MenuItem>
+
+			<MenuItem Command="{Binding ChangeTabIndexCommand}" CommandParameter="+1">
+				<MenuItem.Header>
+					<fa:ImageAwesome Height="12" Icon="Regular_ArrowAltCircleRight"/>
+				</MenuItem.Header>
+			</MenuItem>
+
+			<MenuItem Header="{Binding SelectedPageIndex}"/>
+
+
 		</Menu>
 		<StatusBar DockPanel.Dock="Bottom">
 			<StatusBarItem>
@@ -51,8 +66,11 @@
 					Height="14"
 					Value="30" />
 			</StatusBarItem>
+
+			<StatusBarItem Content="{Binding SelectedPageIndex}"/>
+
 		</StatusBar>
-		<TabControl>
+		<TabControl SelectedIndex="{Binding SelectedPageIndex}">
 			<TabItem>
 				<TabItem.Header>
 					<StackPanel Orientation="Horizontal">
